kubernetes/test/nginx2/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deploy
  namespace: test
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - name: web
            containerPort: 80
