kubernetes/test/nginx2/nginx-mw.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecttohttps
  namespace: test
spec:
  redirectScheme:
    permanent: false
    scheme: https
