kubernetes/test/nginx2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
  labels:
    app: nginx
  annotations:
    metallb.universe.tf/address-pool: production-public-ips
spec:
  # type: ClusterIP
  type: LoadBalancer
  loadBalancerIP: 10.0.9.183
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
    protocol: TCP
